# cpp-examples

./: .gitignore  CMakeLists.txt  config.cfg
data/: title.akas.tsv
gtest/lib/imdb_localizator/src/: imdb_localizator.cpp
gtest/lib/imdb_localizator/tests/: CMakeLists.txt
gtest/lib/utils/include/: utils.hpp
gtest/lib/utils/tests/: CMakeLists.txt
gui/: CMakeLists.txt
gui/etc/: main.glade
gui/lib/imdb_localizator/: CMakeLists.txt
gui/lib/imdb_localizator/tests/: CMakeLists.txt
gui/lib/imdb_localizator/tests/conf/: simple_case.cfg
gui/lib/imdb_localizator/tests/data/: simple_case.tsv
gui/lib/utils/tests/src/: test_split_string.cpp
gui/src/: common.hpp  custom_object.h  gtkwindow.cpp  gtkwindow.hpp  main.cc  main.cpp  qtwindow.cpp  qtwindow.hpp  qtwindow.ui
lib/imdb_localizator/include/: errors.hpp  imdb_localizator.hpp
lib/imdb_localizator/tests/src/: test_imdb_localizator.cpp
lib/utils/: CMakeLists.txt
lib/utils/src/: utils.cpp
sockets/: CMakeLists.txt
sockets/include/: connection.hpp  server.hpp  socket.hpp  socket_address.hpp
sockets/src/: client.cpp  server.cpp
src/: main.cpp
threads/: CMakeLists.txt
threads/include/: downloader.hpp  main_window.hpp  thread_worker.hpp
threads/src/: main.cpp  main_window.cpp
